Source/WebCore/Modules/indexeddb/IDBDatabaseCallbacksImpl.cpp
@@ -52,10 +52,10 @@ void IDBDatabaseCallbacksImpl::onForcedClose()
         m_database->forceClose();
 }
 
-void IDBDatabaseCallbacksImpl::onVersionChange(uint64_t oldVersion, uint64_t newVersion, IndexedDB::VersionNullness newVersionNullness)
+void IDBDatabaseCallbacksImpl::onVersionChange(uint64_t oldVersion, uint64_t newVersion)
 {
     if (m_database)
-        m_database->onVersionChange(oldVersion, newVersion, newVersionNullness);
+        m_database->onVersionChange(oldVersion, newVersion);
 }
 
 void IDBDatabaseCallbacksImpl::connect(IDBDatabase* database)
